# python-pptx-text-replacer

./: .gitignore  README.md  hatch.toml  pyproject.toml  python-pptx-text-replacer.py  python_pptx_text_replacer.py
.github/workflows/: publish-to-pypi.yml  test-and-publish-to-testpypi.yml
src/python_pptx_text_replacer/: TextReplacer.py  __init__.py  __main__.py  python_pptx_text_replacer.py
test/: Test-Presentation.pptx
tests/: .test_text_replacer.py.swp  test_text_replacer.py
tests/data/: chart-01.pptx  test-03.pptx  test-04.pptx
